--- a/mark.css
+++ b/mark.css
@@ -36,3 +36,18 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
+
+.cards {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    margin: top 20px;
+    flex-wrap: wrap;
+}
+
+.card {
+    background: white;
+    width: 200px;
+    padding: 20px;
+    border-radius: 10px;
+}
